--- a/assets/css/modules_css/container/slider.css
+++ b/assets/css/modules_css/container/slider.css
@@ -1,6 +1,7 @@
 .slider{
     width: 100%;
     max-height: 500px;
+    /* max-height: 100vh; */
     overflow: hidden;
     margin-bottom: -5px;
     position: relative;
@@ -34,14 +35,17 @@
     right: 0;
 }
 .slider-warpper{
+    display: block;
     width: 100%;
-    max-height: 500px;
+    max-height: 500px;    
+    /* max-height: 100vh; */
     overflow: hidden;
     position: relative;
 }
 .slider-main{
     width: 100%;
-    max-height: 500px;
+    max-height: 500px;    
+    /* max-height: 100vh; */
     position: relative;
     display: flex;
 }
